--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,7 +3,7 @@ body {
   display: flex;
   flex-direction: column;
   background-color: #f5f3f1;
-  font-family: Comic Sans MS, Comic Sans, fantasy;
+  /* font-family: 'Comic Neue', 'Roboto', Arial, Helvetica, sans-serif; */
   font-variant: small-caps;
   font-size: 16px;
   overflow-x: hidden;
